<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/backred"
    android:textDirection="rtl"
    android:layoutDirection="ltr"
    android:focusableInTouchMode="true"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/backshapes"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_larg"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:src="@drawable/textlogo1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_user_edit_text"
            android:text="@string/activity_login_title2"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_margin="@dimen/margin_normal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="شماره تلفن همراه"/>
        <EditText
            android:id="@+id/login_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/selector_background_white"
            android:elevation="4dp"
            android:gravity="center"
            android:hint="@string/activity_login_hit_username"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/hint_color"
            android:padding="@dimen/margin_normal"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="رمز رورد"/>
        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_background_white"
            android:elevation="4dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/activity_login_hit_password"
            android:gravity="center"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp"
            android:inputType="textVisiblePassword"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_below="@id/login_user_edit_text"
            android:padding="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            />
        <TextView
            android:id="@+id/login_forget_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_edit_text"
            android:text="@string/activity_login_forget_password"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_margin="@dimen/margin_normal"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/selector_background_white"
        android:text="@string/activity_login_next_btn"
        android:textColor="@color/green"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_larg"
        android:elevation="4dp"
        android:padding="@dimen/margin_normal"
        />
    <TextView
        android:id="@+id/login_new_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_new_account"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_above="@+id/login_next_btn"
        />

</RelativeLayout>